--- a/AV/ShellsortAlt.html
+++ b/AV/ShellsortAlt.html
@@ -52,6 +52,7 @@
   src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
 </script>
 <script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
+<script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
 <script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
 
 <input type="button" name="about" value="About"/>
