--- a/Exercises/ShellsortSeries.html
+++ b/Exercises/ShellsortSeries.html
@@ -10,6 +10,7 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <body>
 
   <script type="text/javascript">
+    // Determine whether a proposed series is legal or not
     function getAnswer(series) {
       if (series[series.length-1] !== 1) return "False";
       for (var i = 1; i < series.length; i++) 
@@ -17,7 +18,9 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       return "True";
     }
 
-    function getSeries(count) {
+    // Generate an array containing a proposed increment series
+    // The series will have count+1 elements
+    function makeSeries(count) {
       var series = [];
       for (var i = 0; i<count; i++)
         series[i] = KhanUtil.randRange(1, 10);
@@ -32,7 +35,7 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <div class="exercise">
     <div class="vars">
       <var id="COUNT">randRange(1, 4)</var>
-      <var id="SERIES">getSeries(COUNT)</var>
+      <var id="SERIES">makeSeries(COUNT)</var>
       </var>
       <var id="ANSWER">getAnswer(SERIES)</var>
     </div>
@@ -51,8 +54,6 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       </div>
     </div>
     <div class="hints">
-      <p>It doesn't matter whether an increment is bigger or smaller
-      than the array size.</p>
       <p>The values on the series must be decreasing.</p>
       <p>A legal series always ends in 1.</p>
     </div>
