Minor exercise tweaks

--- a/Exercises/ShellsortSeries.html
+++ b/Exercises/ShellsortSeries.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-   <title>OpenDSA Exercise: Legal Shellsort Series</title>
-<script>urlBaseOverride = "http://algoviz.org/OpenDSA/khan-exercises/";</script>
-<script
-src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-   <script src="http://algoviz.org/OpenDSA/khan-exercises/khan-exercise.js"></script>
+  <title>OpenDSA Exercise: Legal Shellsort Series</title>
+  <script>urlBaseOverride = "http://algoviz.org/OpenDSA/khan-exercises/";</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="http://algoviz.org/OpenDSA/khan-exercises/khan-exercise.js"></script>
 </head>
 <body>
 
@@ -36,7 +35,6 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <div class="vars">
       <var id="COUNT">randRange(1, 4)</var>
       <var id="SERIES">makeSeries(COUNT)</var>
-      </var>
       <var id="ANSWER">getAnswer(SERIES)</var>
     </div>
     <div class="problems">
