--- a/Exercises/ka-jsav.html
+++ b/Exercises/ka-jsav.html
@@ -4,13 +4,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Addition 1</title>
   <script>urlBaseOverride = "http://algoviz.org/OpenDSA/khan-exercises/";</script>
+  <script src="http://algoviz.org/OpenDSA/khan-exercises/khan-exercise.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
+  <script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />
-   <script src="http://algoviz.org/OpenDSA/khan-exercises/khan-exercise.js"></script>
-<script
-   src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-</script>
-<script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
-<script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
 <body>
   <script>
   var jsav,
