Change the URL base for KA to be local instead of absolute from algoviz.org. This should make it possible to install the repository(s) locally.

--- a/Exercises/ShellsortSeries.html
+++ b/Exercises/ShellsortSeries.html
@@ -2,7 +2,7 @@
 <html data-require="math">
 <head>
   <title>OpenDSA Exercise: Legal Shellsort Series</title>
-  <script>urlBaseOverride = "http://algoviz.org/OpenDSA/khan-exercises/";</script>
+  <script>urlBaseOverride = "../../khan-exercises/";</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="http://algoviz.org/OpenDSA/khan-exercises/khan-exercise.js"></script>
 </head>
