--- a/Exercises/ODSAindex.html
+++ b/Exercises/ODSAindex.html
@@ -2,9 +2,9 @@
 <html data-require="math">
 <head>
   <title>OpenDSA Exercise: Chosing the best indexing method</title>
-  <script>urlBaseOverride = "../../khan-exercises/";</script>
+  <script>urlBaseOverride = "../lib/khan-exercises/";</script>
+   <script src="../lib/khan-exercises/khan-exercise.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-   <script src="../../khan-exercises/khan-exercise.js"></script>
 </head>
 <body>
 
