--- a/Exercises/ka-jsav.html
+++ b/Exercises/ka-jsav.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Addition 1</title>
-  <script>urlBaseOverride = "../../khan-exercises/";</script>
-  <script src="../../khan-exercises/khan-exercise.js"></script>
+  <script>urlBaseOverride = "../lib/khan-exercises/";</script>
+  <script src="../lib/khan-exercises/khan-exercise.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
   <script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
