--- a/Exercises/ShellsortMC.html
+++ b/Exercises/ShellsortMC.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math">
+<html data-require="math spin">
 <head>
   <title>OpenDSA Exercise: Multiple Choice Summary</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -28,13 +28,32 @@
         <p class="question">
 	  What is the best case input for Shellsort?
 	</p>
-        <div class="solution"><var>"A sorted array because all the sublists are sorted in linear time."</var></div>
+        <div class="solution"><var>"A sorted array because each sublist is sorted in linear time."</var></div>
 	<ul class="choices" data-show="4">
-	  <li><var>"A sorted array because all the sublists are sorted in linear time."</var></li>
+	  <li><var>"A sorted array because each sublist is sorted in linear time."</var></li>
 	  <li><var>"A reverse sorted array because because all the sublists are sorted in linear time."</var></li>
 	  <li><var>"A random array, without too much order or dis-order, which will keep things balanced."</var></li>
 	  <li><var>"It doesn't matter, all inputs of a given size will cost the same."</var></li>
 	</ul>
+      </div>
+      <div id="problem-type-or-description">
+        <p class="question">
+	  Which is the divide-by-twos increment series for an array of 32 elements?
+	</p>
+        <div class="solution"><var>"16, 8, 4, 2, 1"</var></div>
+	<ul class="choices" data-show="4" data-none="true">
+	  <li><var>"8, 4, 2, 1"</var></li>
+	  <li><var>"16, 8, 4, 2, 1"</var></li>
+	  <li><var>"32, 4, 1"</var></li>
+	  <li><var>"16, 4, 1"</var></li>
+	  <li><var>"More than one of these."</var></li>
+	</ul>
+	<div class="hints">
+	  <p>The first increment must be a power of 2 that generates
+	  sublists with two elements.</p>
+	  <p>Each succeeding increment must be half the size of the
+	  previous one.</p>
+	</div>
       </div>
       <div id="problem-type-or-description">
         <p class="question">
@@ -51,32 +70,54 @@
 	</ul>
       </div>
       <div id="problem-type-or-description">
-        <p class="question">
-	  What is the cost when the input is a sorted array using
-	  divide-by-twos increments?
+	<p class="question">
+	  What is the average case cost of Shellsort?
 	</p>
-        <div class="solution"><var><code>n</code></var></div>
+	<div class="solution"><var><code>O(n \sqrt{n})</code></var></div>
 	<ul class="choices" data-show="4" data-none="true">
-	  <li><var><code>n^2</code></var></li>
-	  <li><var><code>n</code></var></li>
-	  <li><var><code>n \log n</code></var></li>
-	  <li><var><code>2^n</code></var></li>
-	  <li><var><code>\log n</code></var></li>
+	  <li><var><code>O(n^2)</code></var></li>
+	  <li><var><code>O(n)</code></var></li>
+	  <li><var><code>O(n \log n)</code></var></li>
+	  <li><var><code>O(2^n)</code></var></li>
+	  <li><var><code>O(\log n)</code></var></li>
+	  <li><var><code>O(n \sqrt{n})</code></var></li>
 	</ul>
+	<div class="hints">
+	  <p>Shellsort does not have the same runtime as most typical sorts.</p>
+	  <p>Shellsort is better than quadratic time sorts like
+	  Insertion Sort</p>
+	  <p>Shellsort is slower than sorts like Quicksort or
+	  Mergesort.</p>
+	  <p>Shellsort is not <code>O(n \log n)</code> or <code>O(n^2)</code></p>
+	</div>
       </div>
-      <div id="problem-type-or-description" data-weight="100">
-        <p class="question">
-	  Which is an example of divide-by-twos increments on an array
-	  of 32 elements?
+      <div id="problem-type-or-description">
+	<p class="question spin">
+	    What is the
+	    {best-case cost of Shellsort for an aray whose size n is a
+	     power of 2 |
+	     cost of Shellsort on an array of size n}
+	    when using divide-by-twos increments?
 	</p>
-        <div class="solution"><var>"16, 8, 4, 2, 1"</var></div>
+	<div class="solution"><var><code>O(n \log n)</code></var></div>
 	<ul class="choices" data-show="4" data-none="true">
-	  <li><var>"8, 4, 2, 1"</var></li>
-	  <li><var>"16, 8, 4, 2, 1"</var></li>
-	  <li><var>"32, 4, 1"</var></li>
-	  <li><var>"16, 4, 1"</var></li>
-	  <li><var>"More than one of these."</var></li>
+	  <li><var><code>O(n^2)</code></var></li>
+	  <li><var><code>O(n)</code></var></li>
+	  <li><var><code>O(n \log n)</code></var></li>
+	  <li><var><code>O(2^n)</code></var></li>
+	  <li><var><code>O(\log n)</code></var></li>
 	</ul>
+	<div class="hints">
+	  <p>Think about whether the sorted list is a best-case input
+	  or not.</p>
+	  <p>Sorted input is the best case.</p>
+	  <p>How many increments are there for the divide-by-two
+	  increment series?</p>
+	  <p>With divide-by-two increments, there are <code>\log
+	  n</code> increments.</p>
+	  <p><code>\log n</code> passes over an array of
+	  length <code>n</code> must cost <code>n \log n</code>.</p>
+	</div>
       </div>
     </div>
   </div>
