Size and style issues fixed

--- a/AV/binaryheap-buildheap-proficiency.html
+++ b/AV/binaryheap-buildheap-proficiency.html
@@ -4,18 +4,10 @@
     <title>Binary Heap - Build Heap</title>
     <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <style>
-    #av { width: 98%;}
-    .jsavtree {
-      position: relative;
-      width: 500px;
-      height: 400px;
-    }
+    #av { width: auto;}
     .jsavoutput.jsavline { height: 20px; margin: 0 0 0 20px;}
-    .jsavcontrols a { z-index: 99; margin-left: 0;}
-    path {
-      pointer-events: visible;
-    }
-    .jsavcontainer svg {z-index:0;}
+    .jsavcontrols a { margin-left: 0;}
+    #decrement { margin-right: 20px;}
     </style>
   </head>
   <body>
