--- a/AV/binaryheap-insert-proficiency.html
+++ b/AV/binaryheap-insert-proficiency.html
@@ -4,17 +4,12 @@
     <title>Binary Heap Insert</title>
     <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <style>
-    #av { width: 98%; z-index: 1;}
-    .jsavtree {
-      position: relative;
-      width: 500px;
-      height: 400px;
-    }
+    #av { width: auto;}
     .jsavoutput.jsavline { height: 20px; margin: 0 0 0 20px;}
-    .jsavcontrols a { z-index: 99; margin-left: 0;}
+    .jsavcontrols a { margin-left: 0;}
+    #decrement { margin-right: 20px;}
     #insert {float: left; font-size: 150%;}
     .jsavvariable { position: absolute; top: 50px; left: 35px; font-size: 150%;}
-    .jsavcontainer svg {z-index:0;}
     </style>
   </head>
   <body>
