--- a/AV/heapsort-proficiency.html
+++ b/AV/heapsort-proficiency.html
@@ -4,16 +4,10 @@
     <title>Heapsort</title>
     <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <style>
-    #av { width: 98%;}
-    .jsavtree {
-      position: relative;
-      width: 500px;
-      height: 400px;
-    }
+    #av { width: auto;}
     .jsavoutput.jsavline { height: 45px; margin: 0 0 0 20px;}
-    .jsavcontrols a { z-index: 99; margin-left: 0;}
+    .jsavcontrols a { margin-left: 0;}
     #decrement { margin-right: 20px;}
-    .jsavcontainer svg {z-index:0;}
     </style>
   </head>
   <body>
