--- a/AV/insertionsort-av.html
+++ b/AV/insertionsort-av.html
@@ -220,6 +220,8 @@ form {
       av = new JSAV("avcontainer"); // initialize JSAV ..
       // .. and the array. use the layout the user has selected
       arr = av.ds.array(theArray, {indexed: true, layout: arrayLayout.val()});
+      for (i = 0; i < theArray.length; i++)
+      	arr.css(i, {"background-color": "#eee"});
       var i, incr;
       inssort(0, 1);
       av.umsg("Done sorting!");
