Major restructuring of the developer site, in preparation for restructuring of stable site. JSAV is now a submodule of OpenDSA. A copy of the files that we use from khan-exercises is now included here. Lots of minor changes to support the reorganization.

--- a/AV/Birthday.html
+++ b/AV/Birthday.html
@@ -9,7 +9,7 @@
 <head>
   <title>Birthday Problem Calculator</title>
   <link href="opendsAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 <style>
 
 #container {
