--- a/Exercises/ShellsortMC.html
+++ b/Exercises/ShellsortMC.html
@@ -3,8 +3,11 @@
 <head>
   <title>OpenDSA Exercise: Multiple Choice Summary</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script>urlBaseOverride = "../lib/khan-exercises/";</script>
-  <script src="../lib/khan-exercises/khan-exercise.js"></script>
+<script type="text/javascript"
+   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=http://algoviz.org/OpenDSA/dev/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
+</script>
+  <script>urlBaseOverride = "../ODSAkhan-exercises/";</script>
+  <script src="../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 <body>
 
@@ -69,7 +72,7 @@
 	  <li><var>"An array with random input."</var></li>
 	</ul>
       </div>
-      <div id="problem-type-or-description">
+      <div id="problem-type-or-description" data-weight="100">
 	<p class="question">
 	  What is the average case cost of Shellsort?
 	</p>
