--- a/Exercises/ShellsortSeries.html
+++ b/Exercises/ShellsortSeries.html
@@ -2,9 +2,9 @@
 <html data-require="math">
 <head>
   <title>OpenDSA Exercise: Legal Shellsort Series</title>
-  <script>urlBaseOverride = "../lib/khan-exercises/";</script>
-  <script src="../lib/khan-exercises/khan-exercise.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script>urlBaseOverride = "../ODSAkhan-exercises/";</script>
+  <script src="../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 <body>
 
