--- a/AV/binaryheap-insert-proficiency.html
+++ b/AV/binaryheap-insert-proficiency.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Binary Heap Insert</title>
-    <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
+    <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <style>
     #av { width: auto;}
     .jsavoutput.jsavline { height: 20px; margin: 0 0 0 20px;}
@@ -22,10 +22,10 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 
-    <script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
-    <script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
-    <script src="http://algoviz.org/OpenDSA/JSAVdev/build/JSAV-min.js"></script>
-    <script src="http://algoviz.org/OpenDSA/JSAVdev/extras/binaryheap.js"></script>
+    <script src="../JSAV/lib/jquery.transform.light.js"></script>
+    <script src="../JSAV/lib/raphael.js"></script>
+    <script src="../JSAV/build/JSAV-min.js"></script>
+    <script src="../JSAV/extras/binaryheap.js"></script>
     <script>
     var initData, bh,
         jsav = new JSAV("av"),
