--- a/AV/heapsort-proficiency.html
+++ b/AV/heapsort-proficiency.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Heapsort</title>
-    <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
+    <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <style>
     #av { width: auto;}
     .jsavoutput.jsavline { height: 45px; margin: 0 0 0 20px;}
@@ -20,10 +20,10 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 
-    <script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
-    <script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
-    <script src="http://algoviz.org/OpenDSA/JSAVdev/build/JSAV-min.js"></script>
-    <script src="http://algoviz.org/OpenDSA/JSAVdev/extras/binaryheap.js"></script>
+    <script src="../JSAV/lib/jquery.transform.light.js"></script>
+    <script src="../JSAV/lib/raphael.js"></script>
+    <script src="../JSAV/build/JSAV-min.js"></script>
+    <script src="../JSAV/extras/binaryheap.js"></script>
 
     <script>
     var initData, bh,
