Many minor changes to get the links right after the reorganization.

--- a/AV/ShellsortProficiency.html
+++ b/AV/ShellsortProficiency.html
@@ -3,7 +3,7 @@
 <head>
   <title>ShellSort Proficiency Exercise</title>
   <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 <style>
 
 #container {
@@ -87,8 +87,8 @@ a.jsavsettings {
    src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-<script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
-<script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
+<script src="../JSAV/lib/jquery.transform.light.js"></script>
+<script src="../JSAV/build/JSAV-min.js"></script>
 
 <script>
 //(function($) {
