--- a/AV/shellsort.html
+++ b/AV/shellsort.html
@@ -4,7 +4,7 @@
   <title>Shellsort Presentation Slideshow v0.3.0</title>
   <meta charset="utf-8" />
   <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 </head>
 
 <body>
@@ -44,8 +44,8 @@
 <script
   src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
 </script>
-<script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
-<script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
+<script src="../JSAV/lib/jquery.transform.light.js"></script>
+<script src="../JSAV/build/JSAV-min.js"></script>
 
 <script>
 (function($) {
