--- a/AV/ShellsortAlt.html
+++ b/AV/ShellsortAlt.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shellsort Presentation v0.3.0: Alternate Version</title>
+  <title>OpenDSA Test Textbook: Shell Sort</title>
   <meta charset="utf-8" />
-  <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />
+  <link href="../Modules/opendsaMOD.css" rel="stylesheet" type="text/css" />
+  <link href="../JSAV/css/JSAV.css" rel="stylesheet" type="text/css" />
+  <script type="text/javascript"
+   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
+  <script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+  </script>
+  <script  src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
+  </script>
+  <script src="../JSAV/lib/jquery.transform.light.js"></script>
+  <script src="../JSAV/lib/raphael.js"></script>
+  <script src="../JSAV/build/JSAV-min.js"></script>
+  <script type="text/javascript" src="../Modules/ODSA.js"></script>
 </head>
 
 <body>
+<div id="content">
+<h1>Module 20: Shell Sort</h1>
+<ODSAprereq "Sorting" />
+<ODSAprereq "InsertionSort" />
+<ODSAprereq "ExchangeSort" />
+
 <style>
   #container .jsavarray {
      left: -10px;
@@ -45,17 +62,8 @@
   
 </style>
 
-<script
-  src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-</script>
-<script
-  src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
-</script>
-<script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
-<script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
-<script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
 
-<input type="button" name="about" value="About"/>
+<input type="button" float="right" name="about" value="About"/>
 
 <script>
   // Various functions and variables that will be used by all of the
@@ -146,58 +154,58 @@
   }
 </script>
 
-<div id="content">
-<h1>Shellsort Tutorial</h1>
-</div>
-
 <p>
 Shellsort was named after its inventor, D.L. Shell.
-It is also sometimes called the <b>diminishing increment</b> sort.
+It is also sometimes called the <b>diminishing increment</b><a name="def:20.1"></a> sort.
 Unlike Insertion Sort and Selection Sort, there is no real-life
 intuition to inspire Shellsort - nobody will use Shellsort to
 sort their Bridge hand or organize their bills.
 But when properly implemented, Shellsort will give
-substantially better performance than any of the &theta;(n<sup>2</sup>) 
+substantially better performance than any of the \(\theta(n^2)\)
 sorts.
 Unlike the exchange sorts (Insertion Sort and Bubble Sort),
 Shellsort makes comparisons and swaps between non-adjacent elements.
 Shellsort also exploits the best-case performance of Insertion Sort.
 Shellsort's strategy is to quickly make the list ``mostly sorted''
 so that a final Insertion Sort can finish the job.
+</p>
 
 <p>
-Shellsort uses a process that forms the basis most good sorts:
-Break the list into sublists, sort them, then recombine the sublists.
-Shellsort does this in an unusual way, breaking its input
-into ``virtual'' sublists.
-Each sublist is sorted using an Insertion Sort.
+Shellsort does what most good sorts do:
+Break the list into sublists, sort the sublists, then recombine them.
+But Shellsort does this in an unusual way, breaking its input
+into "virtual" sublists of elements that are often not contiguous.
+Each such sublist is sorted using an Insertion Sort.
 Another group of sublists is then chosen and sorted, and so on.
 </p>
 
 <p>
-Shellsort's driving inspiration is to take advantage of the fact that
-Insertion Sort works very well when the list is nearly sorted.
-(When the list is nearly sorted, Insertion sort works in linear time.)
+Shellsort's inspiration is the observation that Insertion Sort works
+incredibly well when the list is nearly sorted.
+(Whenever the list is nearly sorted, Insertion sort works in linear time.)
 Shellsort works by performing a series of Insertion Sorts on carefully
 selected sublists, first on small sublists and then on increasingly
 large sublists.
+At each stage, the Insertion Sort is either working on a small list
+(and so is fast) or is working on a nearly sorted list (and again is
+fast).
 </p>
 
 <p>
 Shellsort breaks the list into disjoint sublists, where a sublist
 is defined by an "increment."
-Each element in a sublist is "increment" positions apart.
+Each element in a given sublist is "increment" positions apart.
 For example, if the increment were 4, then each element in the sublist
 would be 4 positions apart.
-In our examples, we assume for convenience that <i>n</i>,
+In our examples, we assume for convenience that \(n\),
 the number of values to be sorted, is a power of two.
 </p>
 
 <p>
 One possible implementation of Shellsort will begin by breaking the
-list into <i>n</i>/2 sublists of 2 elements each, where the array
-index of the 2 elements in each sublist differs by <i>n</i>/2.
-That is, the increment is <i>n</i>/2.
+list into \(n/2\) sublists of 2 elements each, where the array
+index of the 2 elements in each sublist differs by \(n/2\).
+That is, the increment is \(n/2\).
 If there are 16 elements in the array indexed from 0
 to 15, there would initially be 8 sublists of 2 elements each, with
 each element in the sublist being 8 positions apart.
@@ -276,8 +284,8 @@ sorted".
 
 <p>
 The second pass of Shellsort looks at fewer, bigger lists.
-For our example the second pass would have <i>n</i>/4 lists of size 4,
-with the increment being <i>n</i>/4 = 4.
+For our example the second pass would have \(n/4\) lists of size 4,
+with the increment being \(n/4 = 4\).
 Thus, the second pass would have as its first
 sublist the 4 elements in positions 0, 4, 8, and 12.
 The second sublist would have elements in positions 1, 5, 9, and 13,
@@ -411,7 +419,7 @@ style="background-color:#f00;"/>
   // Support for "Exercise 1" button
   $('input[name="ex1"]').click(ex1); // Set callback action
   function ex1() { // This is what we pop up
-    var mystring = "Given a random array of size n, a random increment size I <= n/2, and a random start location S, 0<=S<I (with an arrow over position S), click to highlight the array elements that should be in this sublist. Solve this exercise 10 times in a row to get credit.";
+    var mystring = "Two forms at random:\n1) Given a random array of size n, a random increment size I <= n/2, and a random start location S, 0<=S<I (with an arrow over position S), click to highlight the array elements that should be in this sublist. Solve this exercise 10 times in a row to get credit.\n 2) Given random array of size n, and a sub array with elements highlighted, sort the indicated sublist.";
     alert(mystring);
     this.style.background='#0f0';
   }
@@ -420,14 +428,14 @@ style="background-color:#f00;"/>
 <p>
 Some choices for the series of increments will make Shellsort
 run more efficiently than others.
-In particular, the choice of increments described above (2<sup>k</sup>,
-2<sup>k-1</sup>, ..., 4, 2, 1) turns out to be relatively inefficient.
+In particular, the choice of increments described above
+(\(2^k\), \(2^{k-1}\), ..., 4, 2, 1) turns out to be relatively inefficient.
 You should notice for example that all elements in a given 8 increment
 sublist are also part of some 4 increment sublist, which are all in turn
 elements of the same 2 increment sublist.
 So there is no "crossover" between sublists as the increments
 reduce.
-A better choice is the following series based on "3<i>n</i>+1":
+A better choice is the following series based on "\(3n+1\)":
 (..., 121, 40, 13, 4, 1).
 Another approach is to make sure that the various increments are
 relatively prime.
@@ -438,28 +446,20 @@ At the end of this unit is a tool that lets you see how much
 difference in cost results when you change the increment series.
 </p>
 
-<input type="button" name="ex2" value="Exercise 2"
-style="background-color:#f00;"/>
-
-<script>
-  // Support for "Exercise 2" button
-  $('input[name="ex2"]').click(ex2); // Set callback action
-  function ex2() { // This is what we pop up
-    var mystring = "A proposed increment series is generated and displayed. TRUE or FALSE: This is a legal series of increments for Shellsort. The exercise must be solved correctly 10 times in a row to get credit.";
-    alert(mystring);
-    this.style.background='#0f0';
-  }
-</script>
+<input type="button" name="../Exercises/ShellsortSeries.html+1000+700" value="Show Question 2" id="example427+show" class="showLink" style="background-color:#f00;"/>
+<div id="example427" class="more">
+<input type="button" name="../Exercises/ShellsortSeries.html+1000+700+hide" value="Hide Question 2" id="example427+hide" class="hideLink" style="background-color:#f00;"/>
+</div>
 
 <p>
 At this point, try running Shellsort on an array of your chosen size,
-with either random values or values that you select.
+wth either random values or values that you select.
 You can also set the increment series.
 Use this tool to make sure that you understand how Shellsort works.
 </p>
 
 <center>
- <iframe src="shellsort-av.html"
+ <iframe src="../AV/shellsort-av.html"
 	 type="text/javascript" width="820" height="520"
 	 frameborder="0" marginwidth="0" marginheight="0"
 	 scrolling="no">
@@ -471,38 +471,32 @@ Now test yourself to see how well you understand Shellsort.
 Can you reproduce its behavior?
 </p>
 
-<center>
- <iframe src="ShellsortProficiency.html"
-	 type="text/javascript" width="842" height="480"
-	 frameborder="0" marginwidth="0" marginheight="0"
-	 scrolling="no">
-</iframe>
-</center>
+<input type="button" name="../AV/ShellsortProficiency.html+842+480" value="Show Proficiency Exercise" id="example449+show" class="showLink" style="background-color:#f00;"/>
+<div id="example449" class="more">
+<input type="button" name="../AV/ShellsortProficiency.html+842+480+hide" value="Hide Proficiency Exercise" id="example449+hide" class="hideLink" style="background-color:#f00;"/>
+</div>
 
 <p>
 Now you are ready to try out some different increment series to see
 how they affect the cost of Shellsort.
 </p>
 
-<center>
- <iframe src="ShellsortPerformance.html"
-	 type="text/javascript" width="842" height="410"
-	 frameborder="0" marginwidth="0" marginheight="0"
-	 scrolling="no">
-</iframe>
-</center>
+<input type="button" name="../AV/ShellsortPerformance.html+842+410" value="Show Performance Exercise" id="example456+show" class="showLink" style="background-color:#f00;"/>
+<div id="example456" class="more">
+<input type="button" name="../AV/ShellsortPerformance.html+842+410+hide" value="Hide Performance Exercise" id="example456+hide" class="hideLink" style="background-color:#f00;"/>
+</div>
 
 <p>
 A theoretical analysis of Shellsort is difficult, so we must accept
 without proof that the average-case performance of Shellsort
-(for the ``3<i>n</i>+1''increment series such as ..., 13, 4, 1)
-is O(n&radic;n).
+(for the "\(3n+1\)" increment series such as ..., 13, 4, 1)
+is \(O(n\sqrt{n})\).
 Other choices for the increment
 series can reduce this upper bound somewhat.
 Thus, Shellsort is substantially better than Insertion Sort,
-or any of the other &theta;(n<sup>2</sup>) sorts presented earlier.
+or any of the other \(\theta(n^2)\) sorts presented earlier.
 In fact, Shellsort is not so much worse than the
-asymptotically better sorts to be presented whenever <i>n</i> is of medium
+asymptotically better sorts to be presented whenever \(n\) is of medium
 size (thought is tends to be a little slower than these other
 algorithms when they are well implemented).
 Shellsort illustrates how we can sometimes exploit the special properties
@@ -511,18 +505,29 @@ algorithm is unacceptably slow.
 </p>
 
 
-<input type="button" name="ex3" value="Exercise 3"
-style="background-color:#f00;"/>
+<input type="button" name="../Exercises/ShellsortMC.html+1000+700" value="Show Question 3" id="example477+show" class="showLink" style="background-color:#f00;"/>
+<div id="example477" class="more">
+<input type="button" name="../Exercises/ShellsortMC.html+1000+700+hide" value="Hide Question 3" id="example477+hide" class="hideLink" style="background-color:#f00;"/>
+</div>
 
-<script>
-  // Support for "Exercise 3" button
-  $('input[name="ex3"]').click(ex3); // Set callback action
-  function ex3() { // This is what we pop up
-    var mystring = "Catch-all Summery Exercise: A bank of 20-30 questions is created, varying between multiple choice, T/F, or answer string (number, etc.). On each attempt, one is selected at random. Student must answer 10 in a row correctly to receive credit.";
-    alert(mystring);
-    this.style.background='#0f0';
-  }
-</script>
+</div>
+<p class="footertext">
+<div align="center">
+<p>
+Module Shell Sort created 2012-02-23 at 14:35.
+</p>
+<p>
+Copyright (C) 2012 by .<br/>
+
+This module was created as part of the OpenDSA project,
+which seeks to provide a complete Creative Commons-based Active-eBook
+to support data structures and algorithms courses.
+For more information on the OpenDSA project, see the
+<a href="http://algoviz.org/ebook">OpenDSA Wiki</a>.
+This work is available for your use, under conditions of the
+<a rel="license" href="MIT-license.html">MIT License</a>.
+</div>
+</p>
 
 </body>
 </html>
