--- a/AV/selectionsort-av.html
+++ b/AV/selectionsort-av.html
@@ -3,7 +3,7 @@
 <head>
   <title>Selection Sort AV</title>
   <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 <style>
 
 #container {
@@ -90,8 +90,8 @@ form {
 <script
   src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
 </script>
-<script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
-<script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
+<script src="../JSAV/lib/jquery.transform.light.js"></script>
+<script src="../JSAV/build/JSAV-min.js"></script>
 
 <script>
 (function($) {
