--- a/AV/hashing/introduction.html
+++ b/AV/hashing/introduction.html
@@ -49,11 +49,90 @@ form {
 </head>
 
 <body>
-<div id="container">
+<!-- <div id="container"> -->
   <input type="button" id="about" name="about" value="About" style="margin-top:10px;"/>
   <a class="jsavsettings" href="#">Settings</a>
-  <h1 style="">Insertion Sort Visualization</h1>
+  <h1 style="">Section 1 - Introduction</h1>
+  
+  <p>
+  Hashing is a method for storing and retrieving records from a database.
+  It lets you insert, delete, and search for records based on a search
+  key value. When properly implemented, these operations can be performed
+  in constant time. In fact, a properly tuned hash system typically looks at only 
+  one or two records for each search, insert, or delete operation. This is far better 
+  than the O(log <i>n</i>) average cost required to do a binary search on a sorted array of 
+  <i>n</i> records, or the O(log <i>n</i>) average cost required to do an operation 
+  on a binary search tree. However, even though hashing is based on a very simple idea, it is 
+  surprisingly difficult to implement properly. Designers need to pay careful attention to all 
+  of the details involved with implementing a hash system.
+  </p>
+  
+	<p>
+	A hash system stores records in an array called a <b>hash table</b>,
+	which we will call <b>HT</b>.
+	Hashing works by performing a computation on a search key
+	<i>K</i> in a way that is intended to identify the position in
+	<b>HT</b> that contains the record with key <i>K</i>.
+	The function that does this calculation is called the
+	<b>hash function</b>, and will be denoted by the letter <b>h</b>.
+	Since hashing schemes place records in the table in whatever order
+	satisfies the needs of the address calculation, records are
+	not ordered by value.
+	A position in the hash table is also known as a <b>slot</b>.
+	The number of slots in hash table <b>HT</b> will be denoted by the
+	variable <i>M</i> with slots numbered from 0 to <i>M</i> - 1.
+	</p>
 
+	<p>
+	The goal for a hashing system is to arrange things such that, for any key
+	value <i>K</i> and some hash function <b>h</b>,
+	<i>i</i> = <b>h</b>(<i>K</i>) is a slot in the table such that
+	0 &lt;= <i>i</i> &lt; <i>M</i>,
+	and we have the key of the record stored at
+	<b>HT</b>[<i>i</i>] equal to <i>K</i>.
+	</p>
+	
+	<p>
+	Hashing is not good for applications where multiple
+	records with the same key value are permitted.
+	Hashing is not a good method for answering range searches.
+	In other words, we cannot easily find all records (if any) whose key
+	values fall within a certain range.
+	Nor can we easily find the record with the minimum or maximum key
+	value, or visit the records in key order.
+	Hashing is most appropriate for answering the question, ``What record,
+	if any, has key value <i>K</i>?''
+	<b>For applications where all search is done by exact-match queries,
+	hashing is the search method of choice because it is extremely
+	efficient when implemented correctly.</b>
+	As this tutorial shows, however, there are many approaches
+	to hashing and it is easy to devise an inefficient implementation.
+	Hashing is suitable for both in-memory and disk-based searching and
+	is one of the two most widely used methods for organizing large
+	databases stored on disk (the other is the B-tree).
+	</p>
+	
+	<p>
+	As a simple (though unrealistic) example of hashing,
+	consider storing <i>n</i> records, each with a unique key value in the
+	range 0 to <i>n</i>-1.
+	A record with key <i>k</i> can be stored in
+	<b>HT</b>[<i>k</i>], and so the hash function is
+	<b>h</b>(<i>k</i>) = <i>k</i>.
+	To find the record with key value <i>k</i>, look in
+	<b>HT</b>[<i>k</i>].
+	</p>
+	
+	<br>
+	<br>
+	
+	<p> Select a table size, and enter some numbers. They will be inserted into the hash table 
+	using the hash function h(k) = k.
+	</p>
+	
+	<p> VIZ HERE </p> 
+  
+<!--
   <form id="ssperform">
     <p>
       <input type="button" name="run" value="Run" />
@@ -81,154 +160,9 @@ form {
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline" readonly="readonly"></p>
-  </div> <!--avcontainer-->
-</div> <!--container-->
+  </div>
+</div> 
+-->
 
-<script
-   src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-</script>
-<script
-  src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
-</script>
-<script src="../JSAV/lib/jquery.transform.light.js"></script>
-<script src="../JSAV/build/JSAV-min.js"></script>
-
-<script>
-(function($) {
-  // Number of values in the array
-  var ASize = $('#arraysize').val();
-  // The array of numbers.
-  var theArray = [];
-
-  // check query parameters from URL
-  var params = JSAV.utils.getQueryParameter();
-  if ("array" in params) { // set value of array pick if it is a param
-    $('#arrayValues').val(params["array"]).prop("disabled", true);
-  }
-  
-  // create a new settings panel and specify the link to show it
-  var settings = new JSAV.utils.Settings($(".jsavsettings"));
-  // add the layout setting preference
-  var arrayLayout = settings.add("layout", {"type": "select", "options": {"bar": "Bar", "array": "Array"}, "label":"Array layout: ", "value": "bar"});
-  
-  var context = $("#ssperform");
-  var emptyContent = $("#avcontainer").html();
-  var av, // for JSAV av
-    arr;  // for the JSAV array
-
-  // Connect action callbacks to the HTML entities
-  $('input[name="about"]').click(about);
-  $('input[name="run"]', context).click(runIt);
-  $('input[name="reset"]', context).click(reset);
-
-  // Process About button: Pop up a message with an Alert
-  function about() {
-    var mystring = "Insertion Sort Algorithm Visualization\nWritten by ...\nCreated as part of the OpenDSA hypertextbook project.\nFor more information, see http://algoviz.org/OpenDSA\nWritten during Spring, 2012\nLast update: January, 2012\nJSAV library version " + JSAV.version();
-    alert(mystring);
-  }
-
-  // Process Reset button: Reinitialize the output textbox and the AV
-  function reset(flag) {
-    if (av) {
-      av.clearumsg();
-      $("#avcontainer").unbind().html(emptyContent);
-    }
-    // Clear the array values field, when no params given and reset button hit
-    if (flag !== true) {
-      if (!$('#arrayValues').prop("disabled")) {
-        $('#arrayValues').val("");
-      }
-    }
-  }
-
-  // Validate the user-defined array values
-  function processArrayValues() {
-    var i, 
-        num, 
-        msg = "Must be 5 to 16 positive integers";
-    // Convert user's values to an array,
-    // assuming values are space separated
-    theArray = $('input[name="arrayValues"]', context).val().match(/[0-9]+/g) || [];
-    if (theArray.length === 0) { // Empty field
-      theArray.length = 0;
-      return true;
-    }
-    if (theArray.length < 5 || theArray.length > 16) {
-      alert(msg);
-      theArray.length = 0;
-      return false;
-    }
-    for (i=0; i<theArray.length; i++) {
-      theArray[i] = Number(theArray[i]);
-      if (isNaN(theArray[i]) || theArray[i] < 0) { 
-        alert(msg);
-        theArray.length = 0;
-        return false;
-      }
-    }
-    $('#arraysize').val(theArray.length);
-    return true;
-  }
-
-
-  var setBlue = function(index) {
-    arr.css(index, {"background-color": "#ddf" });
-  };
-
-  // Insertion sort using increments
-  function inssort(start, incr) {
-    var i, j;
-    av.umsg("Sorting the subarray");
-    for (i=start+incr; i<arr.size()-1; i+=incr) {
-      setBlue(i);
-      for (j=i; j>=incr; j-=incr) {
-        setBlue(j-incr);
-	av.step();
-        if (arr.value(j) < arr.value(j-incr)) {
-          arr.swap(j, j-incr); // swap the two indices
-          av.step();
-	}
-        else {
-  	  arr.highlight([j-incr, j]);
-          break; // Done pushing element, leave for loop
-        }
-	arr.highlight(j);
-      }
-      arr.highlight(j);
-    }
-  }
-  
-  // Execute the "Run" button function
-  function runIt() {
-    var i;
-    var newSize = $('#arraysize').val();
-
-    if (processArrayValues()) { // if it is false, we got junk user
-                                // needs to fix
-      if (theArray.length === 0) { // Make a random  array
-        ASize = newSize;
-        theArray.length = 0; // Out with the old
-        // Give random numbers in range 0..999
-        for (i=0; i < ASize; i++) {
-          theArray[i] = Math.floor(Math.random()*1000);
-        }
-      }
-      else { // Use the values we got out of the user's list
-        ASize = theArray.length;
-      }
-      reset(true); // Reset any previous visualization
-      av = new JSAV("avcontainer"); // initialize JSAV ..
-      // .. and the array. use the layout the user has selected
-      arr = av.ds.array(theArray, {indexed: true, layout: arrayLayout.val()});
-      for (i = 0; i < theArray.length; i++)
-      	arr.css(i, {"background-color": "#eee"});
-      var i, incr;
-      inssort(0, 1);
-      av.umsg("Done sorting!");
-      av.recorded(); // mark the end
-    }
-  }
-})(jQuery);
-</script>
 </body>
 </html>
