Added instructions to heap AVs (see #7)

--- a/AV/binaryheap-buildheap-proficiency.html
+++ b/AV/binaryheap-buildheap-proficiency.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <div id="av">
+      <p style="margin-top:-5px">Instructions:</p>
+  <p style="margin-top: -15px; padding: 10px; 10px; margin-right: 10px; border: 1px solid black">In this exercise, your task is to run the build-heap algorithm on the heap. The min-heap is visualized both as a binary tree and array and the exercise can be completed by swapping keys in either visualization. You can swap two elements by first clicking on one element and then another.</p>
       <p align="center" class="jsavexercisecontrols"></p>
     </div>
     <script
