--- a/AV/binaryheap-delete-proficiency.html
+++ b/AV/binaryheap-delete-proficiency.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <div id="av">
+      <p style="margin-top:-5px">Instructions:</p>
+      <p style="margin-top: -15px; padding: 10px; 10px; margin-right: 10px; border: 1px solid black">Perform DeleteMin three times, and after each deletion, restore heap property. For each record stored into heap you can see a key that corresponds to the priority. "Decrement heap size" -button will delete the last key of the heap. In addition, by first clicking one key and then another, you can swap the records. </p>
       <p align="center" class="jsavexercisecontrols"><input id="decrement" type="button" value="Decrement heapsize" /></p>
     </div>
     
