--- a/AV/binaryheap-insert-proficiency.html
+++ b/AV/binaryheap-insert-proficiency.html
@@ -9,11 +9,13 @@
     .jsavcontrols a { margin-left: 0;}
     #decrement { margin-right: 20px;}
     #insert {float: left; font-size: 150%;}
-    .jsavvariable { position: absolute; top: 50px; left: 35px; font-size: 150%;}
+    .jsavvariable { position: absolute; top: 190px; left: 35px; font-size: 150%;}
     </style>
   </head>
   <body>
     <div id="av">
+      <p style="margin-top:-5px">Instructions:</p>
+      <p style="margin-top: -15px; padding: 10px; 10px; margin-right: 10px; border: 1px solid black">Insert the stream of keys shown on the upper-left corner into an originally empty minimum binary heap. The heap is also depicted in binary tree representation even though the implementation is an array starting from index 1 (the root node). Each record stored into Heap is represented by a key that shows its priority. You can insert a key by clicking an empty index/node and restore heap property after each insertion by making swaps. You can swap two records by first clicking one, then the other. </p>
       <div id="insert">Insert</div>
       <p align="center" class="jsavexercisecontrols"></p>
     </div>
