--- a/AV/ShellsortProficiency.html
+++ b/AV/ShellsortProficiency.html
@@ -328,7 +328,7 @@ a.jsavsettings {
   
   var swapIndex;
   // register click handlers for the array indices
-  $("#profArray .jsavindex").live("click", function() {
+  $("#profArray").on("click", ".jsavindex", function() {
     var index = $(this).parent(".jsavarray").find(".jsavindex").index(this);
     av._redo = []; // clear the forward stack, should add a method for this in lib
     if (mode.value() === "SELECTING" || mode.value() === "FIRSTSELECTING") { // in selecting mode, highlight index
