Fixed a bug with math in exercises by linking to MathJax 1.1-latest instead of MathJax latest (presumably that is 2.0, which KA does not support). Updated ODSAkhan_exercises/utils.

--- a/Exercises/ODSAindex.html
+++ b/Exercises/ODSAindex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Exercise: Chosing the best indexing method</title>
+  <title>OpenDSA Exercise: Choosing the best indexing method</title>
 <script
    src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
 </script>
