--- a/Exercises/ka-jsav.html
+++ b/Exercises/ka-jsav.html
@@ -5,7 +5,7 @@
   <title>Addition 1</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript"
-   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=http://algoviz.org/OpenDSA/dev/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
+   src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/dev/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
 </script>
   <script>urlBaseOverride = "../ODSAkhan-exercises/";</script>
   <script src="../ODSAkhan-exercises/khan-exercise.js"></script>
