--- a/AV/insertionsort-av.html
+++ b/AV/insertionsort-av.html
@@ -219,7 +219,7 @@ form {
       reset(true); // Reset any previous visualization
       av = new JSAV("avcontainer"); // initialize JSAV ..
       // .. and the array. use the layout the user has selected
-      arr = av.ds.array(theArray, {indexed: true});
+      arr = av.ds.array(theArray, {indexed: true, layout: arrayLayout.val()});
       for (i = 0; i < theArray.length; i++)
       	arr.css(i, {"background-color": "#eee"});
       var i, incr;
